<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kikebmx.contactos.Datos"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:text="@string/usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        app:layout_constraintRight_toLeftOf="@+id/txtUsuario"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsuario"
        android:layout_marginEnd="6dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="61dp"
        android:layout_height="32dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblTwitter"
        android:layout_marginTop="79dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblTwitter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/lblTwitter"
        android:layout_width="69dp"
        android:layout_height="24dp"
        android:text="@string/twitter"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTwitter"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTwitter"
        android:layout_marginLeft="16dp"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteY="153dp"
        tools:layout_editor_absoluteX="19dp" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:text="@string/telefono"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="@+id/lblTwitter"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnGuardar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/lblFechaN"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:text="@string/fecha_nacimiento"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtFechaN"
        app:layout_constraintRight_toLeftOf="@+id/txtFechaN"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/lblEmail"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="@+id/txtEmail"
        android:layout_marginTop="0dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lblEmail"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:ignore="MissingConstraints,TextFields"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTwitter"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="73dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="73dp"
        app:layout_constraintTop_toTopOf="@+id/txtUsuario"
        app:layout_constraintLeft_toRightOf="@+id/lblEmail"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtTwitter"
        android:layout_height="39dp"
        android:layout_marginBottom="73dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/lblTelefono"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintLeft_toRightOf="@+id/lblUsuario"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_width="281dp" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="4dp"
        app:layout_constraintRight_toRightOf="@+id/txtTwitter"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lblTwitter"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.498" />

    <EditText
        android:id="@+id/txtFechaN"
        android:layout_width="212dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        android:layout_height="36dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGuardar"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="82dp"
        app:layout_constraintTop_toTopOf="@+id/lblTelefono"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_dark"
        android:backgroundTint="@android:color/background_dark"
        android:text="@string/guardar"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>
